# neat-claude-monitor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: neat-claude-monitor-spec.md
neat_claude_monitor/: __init__.py  cli.py  history.py  hooks.py  models.py  notifications.py  registry.py  server.py  token_usage.py  utils.py
neat_claude_monitor/templates/: index.html
neat_claude_monitor/templates/fragments/: _tool_detail.html  history_card.html  request_card.html  session_row.html
tests/: test_hooks.py  test_models.py  test_registry.py  test_server.py  test_token_usage.py
