[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neat-claude-monitor"
version = "0.1.0"
description = "Monitor and control permissions for running Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
neat-claude-monitor = "neat_claude_monitor.cli:main"
